--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         :root {
             --bg: #0d1117; 
             --card: #161b22;
-            --accent: #97c1e7; /* 메인 테마 색상 */
+            --accent: #97c1e7; /* 요청하신 메인 색상 */
             --accent-dim: rgba(151, 193, 231, 0.1);
             --text-main: #f0f6fc;
             --text-sub: #8b949e;
@@ -47,11 +47,11 @@
             transition: 0.1s; font-size: 1.1rem;
         }
 
-        /* --- 2. [수정] 히어로 섹션: 크기 축소 및 흐릿한 롤링 배너 --- */
+        /* --- 2. 히어로 섹션: 이름 뒤 흐릿한 롤링 배너 --- */
         .hero {
             position: relative;
             width: 100%;
-            height: 320px; /* 크기를 450px에서 320px로 줄임 */
+            height: 320px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -87,43 +87,45 @@
         .hero-content h1 { font-size: 2.2rem; color: var(--accent); margin: 0; text-shadow: 3px 3px #000; }
         .hero-content p { font-size: 1.1rem; color: #fff; margin-top: 15px; background: rgba(0,0,0,0.5); display: inline-block; padding: 5px 15px; }
 
-        /* --- 3. [수정] 보유 기술 (폰트 크기 원복 & 중앙 정렬) --- */
+        /* --- 3. 보유 기술(PLAYER ABILITIES) : 공백 축소 및 중앙 정렬 --- */
         .section-title { 
-            max-width: 1100px; margin: 60px auto 30px; padding: 0 20px; 
-            font-size: 1.3rem; /* 크기를 원래대로 돌림 */
+            max-width: 1100px; margin: 60px auto 25px; padding: 0 20px; 
+            font-size: 1.3rem; 
             color: var(--accent); letter-spacing: 2px;
             text-align: left;
         }
         
         .skills-wrapper {
-            max-width: 1100px; margin: 0 auto 80px; padding: 0 20px;
-            display: grid; grid-template-columns: repeat(3, 1fr); gap: 20px;
+            max-width: 1100px; margin: 0 auto 60px; padding: 0 20px;
+            display: grid; grid-template-columns: repeat(3, 1fr); gap: 15px;
         }
 
         .skill-group {
-            background: var(--card); border: 2px solid var(--border); padding: 25px;
-            display: flex; flex-direction: column; gap: 15px;
+            background: var(--card); border: 2px solid var(--border); padding: 20px;
+            display: flex; flex-direction: column; gap: 10px; /* 그룹 내 항목 간격 축소 */
         }
 
         .skill-group-title {
-            font-size: 1rem; /* 크기를 원래대로 돌림 */
+            font-size: 1rem;
             color: var(--accent); text-align: center; 
-            border-bottom: 2px solid var(--border); padding-bottom: 15px;
+            border-bottom: 2px solid var(--border); padding-bottom: 12px;
+            margin-bottom: 10px;
         }
 
+        /* 아이템 상하좌우 정중앙 정렬 및 여백 최소화 */
         .skill-item { 
             display: flex; flex-direction: column; 
             align-items: center; justify-content: center; 
-            text-align: center; min-height: 90px; padding: 5px 0;
+            text-align: center; min-height: 85px; padding: 5px 0;
         }
         .skill-name { font-size: 0.95rem; color: var(--text-main); font-weight: bold; margin-bottom: 4px; }
-        .stars { color: #ffff00; font-size: 0.75rem; margin-bottom: 6px; }
-        .skill-desc { color: var(--text-sub); font-size: 0.8rem; line-height: 1.4; max-width: 90%; }
+        .stars { color: #ffff00; font-size: 0.75rem; margin-bottom: 5px; }
+        .skill-desc { color: var(--text-sub); font-size: 0.8rem; line-height: 1.4; max-width: 95%; }
 
-        /* --- 4. [수정] 프로젝트 (폰트 크기 원복) --- */
+        /* --- 4. 프로젝트(SELECT STAGE) : 격자 레이아웃 수정 --- */
         .project-container { 
             max-width: 1100px; margin: 0 auto 120px; padding: 0 20px; 
-            display: grid; grid-template-columns: repeat(3, 1fr); gap: 30px; 
+            display: grid; grid-template-columns: repeat(3, 1fr); gap: 25px; 
         }
         
         .project-card {
@@ -156,7 +158,7 @@
 <body>
 
     <div id="intro-overlay">
-        <h1>GAME DESIGNER<br>LEE JAE YOUNG<br><span>PORTFOLIO</span></h1>
+        <h1>GAME DESIGNER<br>이재영<br><span>PORTFOLIO</span></h1>
         <button class="btn-pixel blink" onclick="startGame()">START ADVENTURE</button>
     </div>
 
@@ -287,36 +289,36 @@
             { 
                 title: "RHYTHM ELEVEN", 
                 tag: "1인 기획 & 개발", 
-                desc: "축구 전략성과 리듬 실력 기반 입력을 융합한 게임입니다[cite: 105, 122]. AI 협업을 통해 로직 효율성을 검증하며 완성도를 높였습니다[cite: 194].", 
-                achievements: "<li>동적 난이도 시스템 설계 [cite: 216]</li><li>코드 기반 유연한 비주얼 연출 구현 [cite: 225]</li>", 
+                desc: "축구 전략성과 리듬 실력 기반 입력을 융합한 게임입니다. AI 협업을 통해 로직 효율성을 검증하며 완성도를 높였습니다.", 
+                achievements: "<li>동적 난이도 시스템 설계</li><li>코드 기반 유연한 비주얼 연출 구현</li>", 
                 img: "P1.png", pdf: "데브켓_포트폴리오_이재영.pdf" 
             },
             { 
                 title: "코코두기 (KOKODUGI)", 
                 tag: "10인 팀 협업", 
-                desc: "사용자 시선의 학습 곡선을 설계한 기업 연계 프로젝트입니다[cite: 263, 269]. 레벨 디자인과 데이터 입력 도구 개발을 주도했습니다[cite: 254, 259].", 
-                achievements: "<li>Excel VBA 기반 전용 데이터 매니저 구축 [cite: 308]</li><li>단계적 튜토리얼 및 레벨 밸런싱 [cite: 288]</li>", 
+                desc: "사용자 시선의 학습 곡선을 설계한 기업 연계 프로젝트입니다. 레벨 디자인과 데이터 입력 도구 개발을 주도했습니다.", 
+                achievements: "<li>VBA 기반 전용 데이터 매니저 구축</li><li>단계적 튜토리얼 및 레벨 밸런싱</li>", 
                 img: "P2.png", pdf: "데브켓_포트폴리오_이재영.pdf" 
             },
             { 
                 title: "게임 밸런스 개선안", 
                 tag: "EA KOREA 실무", 
-                desc: "라이브 지표 분석을 통해 유저 만족도 하락 원인을 분석하고 [cite: 350], 데이터에 근거한 개선안을 제안했습니다[cite: 356].", 
-                achievements: "<li>로빙 스루 패스 지표 83% 감소 원인 규명 [cite: 371]</li><li>부정 여론 2,000건 정량 데이터화 [cite: 349, 353]</li>", 
+                desc: "라이브 지표 분석을 통해 유저 만족도 하락 원인을 분석하고, 데이터에 근거한 개선안을 제안했습니다.", 
+                achievements: "<li>로빙 스루 패스 지표 83% 감소 원인 규명</li><li>수비 AI 개선에 따른 간접적 너프 영향 입증</li>", 
                 img: "P3.png", pdf: "데브켓_포트폴리오_이재영.pdf" 
             },
             { 
                 title: "감독의 전술 노트", 
                 tag: "신규 시스템 제안", 
-                desc: "전술적 갈증을 성장의 재미로 전환하는 수집 시스템입니다[cite: 428]. 유기적인 선순환 구조와 다각도 BM을 설계했습니다[cite: 483, 487].", 
-                achievements: "<li>수집-조합-시너지-성장 코어 루프 설계 [cite: 483]</li><li>시즌 패스 및 감독팩 유료화 모델링 [cite: 487]</li>", 
+                desc: "전술적 갈증을 성장의 재미로 전환하는 수집 시스템입니다. 유기적인 선순환 구조와 다각도 BM을 설계했습니다.", 
+                achievements: "<li>수집-조합-시너지-성장 코어 루프 설계</li><li>시즌 패스 및 감독팩 유료화 모델링</li>", 
                 img: "P4.png", pdf: "데브켓_포트폴리오_이재영.pdf" 
             },
             { 
                 title: "공공 야간약국 최적지", 
                 tag: "데이터 분석", 
-                desc: "의료 사각지대 해소를 위한 정량적 입지 분석 프로젝트입니다[cite: 604, 608]. 복합 지표 가중치 로직을 통해 실질적인 해결책을 도출했습니다[cite: 678, 679].", 
-                achievements: "<li>자치구별 복합 가중치 분석 모델 설계 [cite: 678]</li><li>QGIS 시각화를 통한 최적지 산출 [cite: 673, 676]</li>", 
+                desc: "의료 사각지대 해소를 위한 정량적 입지 분석 프로젝트입니다. 복합 지표 가중치 로직을 통해 실질적인 해결책을 도출했습니다.", 
+                achievements: "<li>자치구별 복합 가중치 분석 모델 설계</li><li>QGIS 시각화를 통한 최적지 산출</li>", 
                 img: "P5.png", pdf: "데브켓_포트폴리오_이재영.pdf" 
             }
         ];
