--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             --border: #30363d;
         }
 
-        /* 폰트 기본 설정 */
+        /* 폰트 기본 설정: 한글 Galmuri9 우선 적용 */
         body, button { font-family: 'Galmuri9', sans-serif; }
         h1, h2, h3, .pixel-font, .tag { font-family: 'Press Start 2P', 'Galmuri9', cursive; }
 
@@ -87,42 +87,44 @@
         .hero-content h1 { font-size: 2.2rem; color: var(--accent); margin: 0; text-shadow: 3px 3px #000; }
         .hero-content p { font-size: 1.1rem; color: #fff; margin-top: 15px; background: rgba(0,0,0,0.5); display: inline-block; padding: 5px 15px; }
 
-        /* --- 3. 보유 기술(PLAYER ABILITIES) : 공백 축소 및 중앙 정렬 --- */
+        /* --- 3. 보유 기술(PLAYER ABILITIES) : 좌측 정렬 및 간격 축소 --- */
         .section-title { 
-            max-width: 1100px; margin: 60px auto 25px; padding: 0 20px; 
+            max-width: 1100px; margin: 60px auto 30px; padding: 0 20px; 
             font-size: 1.3rem; 
             color: var(--accent); letter-spacing: 2px;
             text-align: left;
         }
         
         .skills-wrapper {
-            max-width: 1100px; margin: 0 auto 60px; padding: 0 20px;
+            max-width: 1100px; margin: 0 auto 80px; padding: 0 20px;
             display: grid; grid-template-columns: repeat(3, 1fr); gap: 15px;
         }
 
         .skill-group {
-            background: var(--card); border: 2px solid var(--border); padding: 20px;
-            display: flex; flex-direction: column; gap: 10px; /* 그룹 내 항목 간격 축소 */
+            background: var(--card); border: 2px solid var(--border); padding: 25px;
+            display: flex; flex-direction: column; gap: 8px; /* 항목 간 폭 대폭 축소 */
         }
 
         .skill-group-title {
-            font-size: 1rem;
-            color: var(--accent); text-align: center; 
-            border-bottom: 2px solid var(--border); padding-bottom: 12px;
-            margin-bottom: 10px;
+            font-size: 0.95rem;
+            color: var(--accent); text-align: left; /* 좌측 정렬 */
+            border-bottom: 2px solid var(--border); padding-bottom: 10px;
+            margin-bottom: 12px;
         }
 
-        /* 아이템 상하좌우 정중앙 정렬 및 여백 최소화 */
+        /* [수정] 좌측 정렬 적용 및 텍스트 줄바꿈 방지 */
         .skill-item { 
             display: flex; flex-direction: column; 
-            align-items: center; justify-content: center; 
-            text-align: center; min-height: 85px; padding: 5px 0;
+            align-items: flex-start; /* 좌측 정렬 */
+            justify-content: center; 
+            text-align: left; padding: 4px 0;
         }
-        .skill-name { font-size: 0.95rem; color: var(--text-main); font-weight: bold; margin-bottom: 4px; }
-        .stars { color: #ffff00; font-size: 0.75rem; margin-bottom: 5px; }
-        .skill-desc { color: var(--text-sub); font-size: 0.8rem; line-height: 1.4; max-width: 95%; }
+        .skill-name-row { display: flex; align-items: center; gap: 8px; margin-bottom: 3px; }
+        .skill-name { font-size: 0.9rem; color: var(--text-main); font-weight: bold; }
+        .stars { color: #ffff00; font-size: 0.7rem; }
+        .skill-desc { color: var(--text-sub); font-size: 0.8rem; line-height: 1.3; }
 
-        /* --- 4. 프로젝트(SELECT STAGE) : 격자 레이아웃 수정 --- */
+        /* --- 4. 프로젝트(SELECT STAGE) : 격자 레이아웃 안정화 --- */
         .project-container { 
             max-width: 1100px; margin: 0 auto 120px; padding: 0 20px; 
             display: grid; grid-template-columns: repeat(3, 1fr); gap: 25px; 
@@ -137,9 +139,9 @@
         .card-img-box { width: 100%; height: 180px; background: #000; border-bottom: 2px solid var(--border); overflow: hidden; }
         .card-img-box img { width: 100%; height: 100%; object-fit: cover; }
 
-        .card-info-box { padding: 20px; text-align: center; flex-grow: 1; }
-        .tag { font-size: 0.65rem; color: var(--accent); margin-bottom: 10px; display: block; }
-        .project-card h3 { font-size: 1rem; margin: 0; color: #fff; line-height: 1.4; }
+        .card-info-box { padding: 18px; text-align: center; flex-grow: 1; }
+        .tag { font-size: 0.6rem; color: var(--accent); margin-bottom: 8px; display: block; }
+        .project-card h3 { font-size: 0.95rem; margin: 0; color: #fff; line-height: 1.4; word-break: keep-all; }
 
         /* --- 5. 모달 스타일 --- */
         .modal { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.95); z-index: 10001; justify-content: center; align-items: center; padding: 20px; }
@@ -150,7 +152,6 @@
 
         @media (max-width: 950px) {
             .skills-wrapper, .project-container { grid-template-columns: 1fr; }
-            .hero-content h1 { font-size: 1.6rem; }
             .hero { height: 280px; }
         }
     </style>
@@ -158,7 +159,7 @@
 <body>
 
     <div id="intro-overlay">
-        <h1>GAME DESIGNER<br>이재영<br><span>PORTFOLIO</span></h1>
+        <h1>GAME DESIGNER<br>LEE JAE YOUNG<br><span>PORTFOLIO</span></h1>
         <button class="btn-pixel blink" onclick="startGame()">START ADVENTURE</button>
     </div>
 
@@ -179,68 +180,68 @@
         </div>
         <div class="hero-content">
             <h1>LEE JAE YOUNG<span>_</span></h1>
-            <p>"끈기 있는 데이터 기반의 게임 체인저"</p>
+            [cite_start]<p>"끈기 있는 데이터 기반의 게임 체인저" [cite: 9]</p>
         </div>
     </header>
 
     <h2 class="section-title">> 보유 기술(PLAYER ABILITIES)</h2>
     <div class="skills-wrapper">
         <div class="skill-group">
-            <div class="skill-group-title">MANAGEMENT</div>
+            <div class="skill-group-title">협업 & 관리(MANAGEMENT)</div>
             <div class="skill-item">
-                <div class="skill-name">Jira <span class="stars">★★★★★</span></div>
+                <div class="skill-name-row"><span class="skill-name">Jira</span> <span class="stars">★★★★★</span></div>
                 <div class="skill-desc">마일스톤 관리 및 이슈 트래킹</div>
             </div>
             <div class="skill-item">
-                <div class="skill-name">Slack <span class="stars">★★★★★</span></div>
+                <div class="skill-name-row"><span class="skill-name">Slack</span> <span class="stars">★★★★★</span></div>
                 <div class="skill-desc">원활한 팀 커뮤니케이션</div>
             </div>
             <div class="skill-item">
-                <div class="skill-name">Confluence <span class="stars">★★★★★</span></div>
+                <div class="skill-name-row"><span class="skill-name">Confluence</span> <span class="stars">★★★★★</span></div>
                 <div class="skill-desc">프로젝트 문서화 및 아카이빙</div>
             </div>
             <div class="skill-item">
-                <div class="skill-name">Notion <span class="stars">★★★★☆</span></div>
+                <div class="skill-name-row"><span class="skill-name">Notion</span> <span class="stars">★★★★☆</span></div>
                 <div class="skill-desc">대시보드 및 일정 관리</div>
             </div>
         </div>
 
         <div class="skill-group">
-            <div class="skill-group-title">DESIGN & DATA</div>
+            <div class="skill-group-title">기획 & 데이터(DESIGN & DATA)</div>
             <div class="skill-item">
-                <div class="skill-name">Excel <span class="stars">★★★★☆</span></div>
+                <div class="skill-name-row"><span class="skill-name">Excel</span> <span class="stars">★★★★☆</span></div>
                 <div class="skill-desc">데이터 분석 및 VBA 자동화</div>
             </div>
             <div class="skill-item">
-                <div class="skill-name">Figma <span class="stars">★★★★☆</span></div>
+                <div class="skill-name-row"><span class="skill-name">Figma</span> <span class="stars">★★★★☆</span></div>
                 <div class="skill-desc">UI/UX 설계 및 프로토타입</div>
             </div>
             <div class="skill-item">
-                <div class="skill-name">PowerPoint <span class="stars">★★★★☆</span></div>
+                <div class="skill-name-row"><span class="skill-name">PowerPoint</span> <span class="stars">★★★★☆</span></div>
                 <div class="skill-desc">제안서 기획 및 비주얼 디자인</div>
             </div>
             <div class="skill-item">
-                <div class="skill-name">Word <span class="stars">★★★★☆</span></div>
+                <div class="skill-name-row"><span class="skill-name">Word</span> <span class="stars">★★★★☆</span></div>
                 <div class="skill-desc">표준 문서 관리 및 명세서</div>
             </div>
         </div>
 
         <div class="skill-group">
-            <div class="skill-group-title">DEV & ENGINE</div>
+            <div class="skill-group-title">개발 & 엔진(DEV & ENGINE)</div>
             <div class="skill-item">
-                <div class="skill-name">Gamemaker <span class="stars">★★★★☆</span></div>
+                <div class="skill-name-row"><span class="skill-name">Gamemaker</span> <span class="stars">★★★★☆</span></div>
                 <div class="skill-desc">축구+리듬 하이브리드 게임 기획</div>
             </div>
             <div class="skill-item">
-                <div class="skill-name">Unity <span class="stars">★★★☆☆</span></div>
+                <div class="skill-name-row"><span class="skill-name">Unity</span> <span class="stars">★★★☆☆</span></div>
                 <div class="skill-desc">엔진 기반 협업 및 기능 활용</div>
             </div>
             <div class="skill-item">
-                <div class="skill-name">Gemini <span class="stars">★★★★☆</span></div>
+                <div class="skill-name-row"><span class="skill-name">Gemini</span> <span class="stars">★★★★☆</span></div>
                 <div class="skill-desc">코딩 파트너 및 데이터 시각화</div>
             </div>
             <div class="skill-item">
-                <div class="skill-name">NotebookLM <span class="stars">★★★★☆</span></div>
+                <div class="skill-name-row"><span class="skill-name">NotebookLM</span> <span class="stars">★★★★☆</span></div>
                 <div class="skill-desc">방대한 설정 분석 및 검증</div>
             </div>
         </div>
@@ -286,41 +287,11 @@
         }
 
         const projects = [
-            { 
-                title: "RHYTHM ELEVEN", 
-                tag: "1인 기획 & 개발", 
-                desc: "축구 전략성과 리듬 실력 기반 입력을 융합한 게임입니다. AI 협업을 통해 로직 효율성을 검증하며 완성도를 높였습니다.", 
-                achievements: "<li>동적 난이도 시스템 설계</li><li>코드 기반 유연한 비주얼 연출 구현</li>", 
-                img: "P1.png", pdf: "데브켓_포트폴리오_이재영.pdf" 
-            },
-            { 
-                title: "코코두기 (KOKODUGI)", 
-                tag: "10인 팀 협업", 
-                desc: "사용자 시선의 학습 곡선을 설계한 기업 연계 프로젝트입니다. 레벨 디자인과 데이터 입력 도구 개발을 주도했습니다.", 
-                achievements: "<li>VBA 기반 전용 데이터 매니저 구축</li><li>단계적 튜토리얼 및 레벨 밸런싱</li>", 
-                img: "P2.png", pdf: "데브켓_포트폴리오_이재영.pdf" 
-            },
-            { 
-                title: "게임 밸런스 개선안", 
-                tag: "EA KOREA 실무", 
-                desc: "라이브 지표 분석을 통해 유저 만족도 하락 원인을 분석하고, 데이터에 근거한 개선안을 제안했습니다.", 
-                achievements: "<li>로빙 스루 패스 지표 83% 감소 원인 규명</li><li>수비 AI 개선에 따른 간접적 너프 영향 입증</li>", 
-                img: "P3.png", pdf: "데브켓_포트폴리오_이재영.pdf" 
-            },
-            { 
-                title: "감독의 전술 노트", 
-                tag: "신규 시스템 제안", 
-                desc: "전술적 갈증을 성장의 재미로 전환하는 수집 시스템입니다. 유기적인 선순환 구조와 다각도 BM을 설계했습니다.", 
-                achievements: "<li>수집-조합-시너지-성장 코어 루프 설계</li><li>시즌 패스 및 감독팩 유료화 모델링</li>", 
-                img: "P4.png", pdf: "데브켓_포트폴리오_이재영.pdf" 
-            },
-            { 
-                title: "공공 야간약국 최적지", 
-                tag: "데이터 분석", 
-                desc: "의료 사각지대 해소를 위한 정량적 입지 분석 프로젝트입니다. 복합 지표 가중치 로직을 통해 실질적인 해결책을 도출했습니다.", 
-                achievements: "<li>자치구별 복합 가중치 분석 모델 설계</li><li>QGIS 시각화를 통한 최적지 산출</li>", 
-                img: "P5.png", pdf: "데브켓_포트폴리오_이재영.pdf" 
-            }
+            [cite_start]{ title: "RHYTHM ELEVEN", tag: "1인 기획 & 개발", desc: "축구 전략성과 리듬 실력 기반 입력을 융합한 게임입니다. AI 협업을 통해 로직 효율성을 검증하며 완성도를 높였습니다. [cite: 92, 105][cite_start]", achievements: "<li>동적 난이도 시스템 설계 [cite: 216][cite_start]</li><li>코드 기반 유연한 비주얼 연출 구현 [cite: 225]</li>", img: "P1.png", pdf: "데브켓_포트폴리오_이재영.pdf" },
+            { title: "코코두기 (KOKODUGI)", tag: "10인 팀 협업", desc: "사용자 시선의 학습 곡선을 설계한 기업 연계 프로젝트입니다. [cite_start]레벨 디자인과 데이터 입력 도구 개발을 주도했습니다. [cite: 93, 263][cite_start]", achievements: "<li>VBA 기반 전용 데이터 매니저 구축 [cite: 308][cite_start]</li><li>단계적 튜토리얼 및 레벨 밸런싱 [cite: 288]</li>", img: "P2.png", pdf: "데브켓_포트폴리오_이재영.pdf" },
+            [cite_start]{ title: "게임 밸런스 개선안", tag: "EA KOREA 실무", desc: "라이브 지표 분석을 통해 유저 만족도 하락 원인을 분석하고, 데이터에 근거한 개선안을 제안했습니다. [cite: 313, 331][cite_start]", achievements: "<li>로빙 스루 패스 지표 83% 감소 원인 규명 [cite: 374][cite_start]</li><li>수비 AI 개선에 따른 간접적 너프 영향 입증 [cite: 371]</li>", img: "P3.png", pdf: "데브켓_포트폴리오_이재영.pdf" },
+            { title: "감독의 전술 노트", tag: "신규 시스템 제안", desc: "전술적 갈증을 성장의 재미로 전환하는 수집 시스템입니다. [cite_start]유기적인 선순환 구조와 다각도 BM을 설계했습니다. [cite: 417, 431][cite_start]", achievements: "<li>수집-조합-시너지-성장 코어 루프 설계 [cite: 483][cite_start]</li><li>시즌 패스 및 감독팩 유료화 모델링 [cite: 566]</li>", img: "P4.png", pdf: "데브켓_포트폴리오_이재영.pdf" },
+            { title: "공공 야간약국 최적지", tag: "데이터 분석", desc: "의료 사각지대 해소를 위한 정량적 입지 분석 프로젝트입니다. [cite_start]복합 지표 가중치 로직을 통해 실질적인 해결책을 도출했습니다. [cite: 604, 617][cite_start]", achievements: "<li>자치구별 복합 가중치 분석 모델 설계 [cite: 678][cite_start]</li><li>QGIS 시각화를 통한 최적지 산출 [cite: 673]</li>", img: "P5.png", pdf: "데브켓_포트폴리오_이재영.pdf" }
         ];
 
         function openModal(i) {
