--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         .stars { color: #ffff00; font-size: 0.7rem; }
         .skill-desc { color: var(--text-sub); font-size: 0.8rem; line-height: 1.3; }
 
-        /* --- 4. 프로젝트(SELECT STAGE) --- */
+        /* --- 4. 프로젝트(SELECT STAGE) : 텍스트 좌측 정렬 --- */
         .project-container { max-width: 1100px; margin: 0 auto 120px; padding: 0 20px; display: grid; grid-template-columns: repeat(3, 1fr); gap: 25px; }
         .project-card { background: var(--card); border: 3px solid var(--border); cursor: pointer; transition: 0.3s; display: flex; flex-direction: column; }
         .project-card:hover { transform: translateY(-8px); border-color: var(--accent); box-shadow: 0 0 20px var(--accent-dim); }
@@ -82,16 +82,16 @@
         .card-img-box img { width: 100%; height: 100%; object-fit: cover; }
         .card-info-box { padding: 18px; text-align: left; flex-grow: 1; }
         .tag { font-size: 0.65rem; color: var(--accent); margin-bottom: 8px; display: block; }
-        .project-card h3 { font-size: 1rem; margin: 0; color: #fff; line-height: 1.4; }
+        .project-card h3 { font-size: 1rem; margin: 0; color: #fff; line-height: 1.4; word-break: keep-all; }
 
-        /* --- 5. [개선됨] 모달 및 스티키 에셋 네비게이션 --- */
+        /* --- 5. 모달 및 스티키 에셋 네비게이션 --- */
         .modal { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.95); z-index: 10001; justify-content: center; align-items: center; padding: 20px; }
         .modal-content { background: var(--bg); border: 4px solid var(--accent); width: 100%; max-width: 1100px; height: 90vh; overflow-y: auto; padding: 0; box-sizing: border-box; position: relative; }
         
         .modal-inner-padding { padding: 40px; }
         .close-pixel { position: absolute; top: 20px; right: 20px; color: var(--accent); font-size: 1.5rem; cursor: pointer; z-index: 1010; }
         
-        /* [수정] 탭 고정(Sticky) 스타일 */
+        /* 탭 고정(Sticky) 스타일 */
         .asset-selector { 
             display: flex; gap: 10px; flex-wrap: wrap; justify-content: flex-start;
             position: sticky; top: 0; z-index: 1000;
@@ -144,7 +144,7 @@
     <div class="skills-wrapper">
         <div class="skill-group">
             <div class="skill-group-title">협업 & 관리</div>
-            <div class="skill-item"><div class="skill-name">Jira ★★★★★</div><div class="skill-desc">마일스톤 및 이슈 트래킹</div></div>
+            <div class="skill-item"><div class="skill-name">Jira ★★★★★</div><div class="skill-desc">마일스톤 관리 및 이슈 트래킹</div></div>
             <div class="skill-item"><div class="skill-name">Slack ★★★★★</div><div class="skill-desc">원활한 팀 커뮤니케이션</div></div>
             <div class="skill-item"><div class="skill-name">Confluence ★★★★★</div><div class="skill-desc">프로젝트 문서화 및 아카이빙</div></div>
             <div class="skill-item"><div class="skill-name">Notion ★★★★☆</div><div class="skill-desc">대시보드 및 일정 관리</div></div>
@@ -202,23 +202,23 @@
             if(overlay) { overlay.style.transition = '0.8s'; overlay.style.opacity = '0'; setTimeout(() => { overlay.style.display = 'none'; }, 800); }
         }
 
-        // [데이터 구성] RHYTHM ELEVEN 다중 파일 및 영상 배치
+        // [RHYTHM ELEVEN 데이터 수정 사항 반영]
         const projects = [
             { 
                 title: "RHYTHM ELEVEN", tag: "SOLO QUEST", 
-                desc: "축구 전략성과 리듬 입력을 융합한 게임입니다. AI 협업을 통해 로직 효율성을 검증했습니다.", 
+                desc: "축구 전략성과 리듬 입력을 융합한 게임입니다. AI 협업을 통해 로직 효율성을 검증하며 완성도를 높였습니다.", 
                 achievements: "<li>동적 난이도 시스템 설계</li><li>코드 기반 유연한 비주얼 연출 구현</li>", img: "P1.png",
                 assets: [
-                    { type: "pdf", title: "메인 기획서", url: "RhythmEleven_Plan.pdf" },
-                    { type: "pdf", title: "데이터 명세", url: "RhythmEleven_Data.pdf" },
-                    { type: "pdf", title: "밸런스 시트", url: "RhythmEleven_Balance.pdf" },
-                    { type: "video", title: "플레이 영상", url: "https://www.youtube.com/embed/영상ID" }
+                    { type: "video", title: "플레이 영상", url: "https://www.youtube.com/embed/F5uLaCbsxe8" },
+                    { type: "pdf", title: "컨셉 기획서", url: "P1_2.pdf" },
+                    { type: "pdf", title: "화면 설계도", url: "P1_3.pdf" },
+                    { type: "pdf", title: "포스트 모템", url: "P1_4.pdf" }
                 ]
             },
-            { title: "KOKODUGI (코코두기)", tag: "PARTY QUEST", desc: "사용자 시선의 학습 곡선을 설계한 기업 연계 프로젝트입니다.", achievements: "<li>VBA 기반 전용 데이터 매니저 구축</li><li>단계적 튜토리얼 및 레벨 밸런싱</li>", img: "P2.png", assets: [{ type: "pdf", title: "기획서 확인", url: "데브켓_포트폴리오_이재영.pdf" }] },
-            { title: "밸런스 개선 제안", tag: "PLAYER-DRIVEN PROPOSAL", desc: "라이브 지표 분석을 통해 유저 만족도 하락 원인을 분석한 실무적 개선안입니다.", achievements: "<li>로빙 스루 패스 지표 83% 감소 원인 규명</li><li>수비 AI 개선에 따른 간접적 너프 영향 입증</li>", img: "P3.png", assets: [{ type: "pdf", title: "분석서 확인", url: "데브켓_포트폴리오_이재영.pdf" }] },
-            { title: "감독의 전술 노트", tag: "SYSTEM DESIGN", desc: "전술적 갈증을 성장의 재미로 전환하는 수집 시스템 제안서입니다.", achievements: "<li>수집-조합-시너지-성장 코어 루프 설계</li><li>시즌 패스 및 감독팩 유료화 모델링</li>", img: "P4.png", assets: [{ type: "pdf", title: "제안서 확인", url: "데브켓_포트폴리오_이재영.pdf" }] },
-            { title: "공공 야간약국 최적지", tag: "DATA ANALYSIS", desc: "의료 사각지대 해소를 위한 정량적 입지 분석 프로젝트입니다.", achievements: "<li>자치구별 복합 가중치 분석 모델 설계</li><li>QGIS 시각화를 통한 최적지 산출</li>", img: "P5.png", assets: [{ type: "pdf", title: "보고서 확인", url: "데브켓_포트폴리오_이재영.pdf" }] }
+            { title: "KOKODUGI (코코두기)", tag: "PARTY QUEST", desc: "사용자 시선의 학습 곡선을 설계한 기업 연계 프로젝트입니다. 레벨 디자인과 데이터 입력 도구 개발을 주도했습니다.", achievements: "<li>VBA 기반 전용 데이터 매니저 구축</li><li>단계적 튜토리얼 및 레벨 밸런싱</li>", img: "P2.png", assets: [{ type: "pdf", title: "기획서 확인", url: "데브켓_포트폴리오_이재영.pdf" }] },
+            { title: "밸런스 개선 제안", tag: "PLAYER-DRIVEN PROPOSAL", desc: "라이브 지표 분석을 통해 유저 만족도 하락 원인을 분석하고, 데이터에 근거한 개선안을 제안했습니다.", achievements: "<li>로빙 스루 패스 지표 83% 감소 원인 규명</li><li>수비 AI 개선에 따른 간접적 너프 영향 입증</li>", img: "P3.png", assets: [{ type: "pdf", title: "분석서 확인", url: "데브켓_포트폴리오_이재영.pdf" }] },
+            { title: "감독의 전술 노트", tag: "SYSTEM DESIGN", desc: "전술적 갈증을 성장의 재미로 전환하는 수집 시스템입니다. 유기적인 선순환 구조와 다각도 BM을 설계했습니다.", achievements: "<li>수집-조합-시너지-성장 코어 루프 설계</li><li>시즌 패스 및 감독팩 유료화 모델링</li>", img: "P4.png", assets: [{ type: "pdf", title: "제안서 확인", url: "데브켓_포트폴리오_이재영.pdf" }] },
+            { title: "공공 야간약국 최적지", tag: "DATA ANALYSIS", desc: "의료 사각지대 해소를 위한 정량적 입지 분석 프로젝트입니다. 복합 지표 가중치 로직을 통해 실질적인 해결책을 도출했습니다.", achievements: "<li>자치구별 복합 가중치 분석 모델 설계</li><li>QGIS 시각화를 통한 최적지 산출</li>", img: "P5.png", assets: [{ type: "pdf", title: "보고서 확인", url: "데브켓_포트폴리오_이재영.pdf" }] }
         ];
 
         function openModal(i) {
