--- a/index.html
+++ b/index.html
@@ -96,6 +96,22 @@
 
         .modal-inner-padding { padding: 40px; clear: both; }
         
+        /* [수정] 모달 내 대표 이미지 크기 통일 스타일 */
+        .modal-img-container {
+            width: 100%;
+            height: 400px; /* 고정 높이 설정 (원하는 크기로 조절 가능) */
+            background: #000;
+            border: 3px solid var(--accent);
+            box-shadow: 10px 10px 0 var(--border);
+            margin-bottom: 30px;
+            overflow: hidden;
+        }
+        .modal-img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover; /* 비율 유지하며 꽉 채우기 */
+        }
+
         /* 탭 고정(Sticky) 영역 */
         .asset-selector { 
             display: flex; gap: 10px; flex-wrap: wrap; justify-content: flex-start;
@@ -129,7 +145,14 @@
         .info-box h4 { color: var(--accent); font-size: 1rem; margin: 0 0 15px 0; }
         .info-box ul { padding-left: 20px; margin: 0; }
 
-        @media (max-width: 950px) { .skills-wrapper, .project-container { grid-template-columns: 1fr; } .viewer-container { min-height: 450px; } .asset-viewer { height: 450px; } .asset-selector { padding: 15px 20px; } }
+        @media (max-width: 950px) { 
+            .skills-wrapper, .project-container { grid-template-columns: 1fr; } 
+            .viewer-container { min-height: 450px; } 
+            .asset-viewer { height: 450px; } 
+            .asset-selector { padding: 15px 20px; } 
+            /* 모바일에서 이미지 높이 줄임 */
+            .modal-img-container { height: 250px; }
+        }
     </style>
 </head>
 <body>
@@ -219,7 +242,6 @@
             if(overlay) { overlay.style.transition = '0.8s'; overlay.style.opacity = '0'; setTimeout(() => { overlay.style.display = 'none'; }, 800); }
         }
 
-        // [데이터 구성] 요청하신 모든 프로젝트 PDF 정보 반영
         const projects = [
             { 
                 title: "RHYTHM ELEVEN", tag: "SOLO QUEST", 
@@ -264,7 +286,6 @@
         function openModal(i) {
             const p = projects[i];
             
-            // 모든 자료 미리 로드 (읽던 위치 유지)
             let viewersHtml = p.assets.map((as, idx) => {
                 if(as.type === 'video') {
                     return `<div class="asset-viewer ${idx===0?'active':''}" id="view-${idx}"><div class="video-wrapper"><iframe src="${as.url}" allowfullscreen></iframe></div></div>`;
@@ -277,10 +298,11 @@
                 `<button class="asset-btn ${idx===0?'active':''}" onclick="switchTab(this, ${idx})">${as.title}</button>`
             ).join('');
 
+            // [수정] 모달 내 이미지 컨테이너 클래스 사용
             document.getElementById('modalBody').innerHTML = `
                 <div class="modal-inner-padding">
-                    <div style="text-align:left; margin-bottom:30px;">
-                        <img src="${p.img}" style="max-width:100%; border:3px solid var(--accent); box-shadow: 10px 10px 0 var(--border);">
+                    <div class="modal-img-container">
+                        <img src="${p.img}" class="modal-img" alt="${p.title}">
                     </div>
                     <h2 style="color:var(--accent); font-size:1.6rem; margin-bottom:10px; text-align:left;">${p.title}</h2>
                     <p style="font-weight:bold; color:var(--text-sub); margin-bottom:25px; text-align:left;">[ ${p.tag} ]</p>
@@ -299,7 +321,6 @@
         }
 
         function switchTab(btn, idx) {
-            // 영상 정지 메시지 전송
             document.querySelectorAll('.video-wrapper iframe').forEach(ifr => {
                 ifr.contentWindow.postMessage('{"event":"command","func":"pauseVideo","args":""}', '*');
             });
