--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
         :root {
             --bg: #0d1117; 
             --card: #161b22;
-            --accent: #97c1e7; /* 메인 테마 색상 */
+            --accent: #97c1e7;
             --accent-dim: rgba(151, 193, 231, 0.1);
             --text-main: #f0f6fc;
             --text-sub: #8b949e;
             --border: #30363d;
         }
 
-        /* 폰트 설정 */
         body, button { font-family: 'Galmuri9', sans-serif; }
         h1, h2, h3, .pixel-font, .tag { font-family: 'Press Start 2P', 'Galmuri9', cursive; }
 
@@ -82,83 +81,79 @@
         .tag { font-size: 0.65rem; color: var(--accent); margin-bottom: 8px; display: block; }
         .project-card h3 { font-size: 1rem; margin: 0; color: #fff; line-height: 1.4; }
 
-        /* --- 5. 모달 및 스티키 시스템 --- */
+        /* --- 5. 모달 및 개선된 스티키 시스템 --- */
         .modal { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.95); z-index: 10001; justify-content: center; align-items: center; padding: 20px; }
         .modal-content { background: var(--bg); border: 4px solid var(--accent); width: 100%; max-width: 1100px; height: 90vh; overflow-y: auto; padding: 0; position: relative; }
         
+        /* EXIT 버튼 우측 상단 고정 */
         .close-pixel { 
             position: sticky; top: 20px; right: 20px; 
             float: right; color: var(--accent); font-size: 1.1rem; cursor: pointer; 
-            z-index: 2000; background: var(--bg); padding: 5px 15px; 
-            border: 2px solid var(--accent); margin: 20px 20px 0 0;
+            z-index: 2000; background: var(--bg); padding: 8px 18px; 
+            border: 3px solid var(--accent); margin: 20px 20px 0 0;
+            box-shadow: 4px 4px 0 #000;
         }
         .close-pixel:hover { background: var(--accent); color: #0d1117; }
 
         .modal-inner-padding { padding: 40px; clear: both; }
         
-        /* [수정] 모달 내 대표 이미지 크기 통일 스타일 */
+        /* [수정] 메인 이미지 안 짤리게 + 크기 축소 */
         .modal-img-container {
             width: 100%;
-            height: 400px; /* 고정 높이 설정 (원하는 크기로 조절 가능) */
+            height: 320px; /* 높이 축소 */
             background: #000;
-            border: 3px solid var(--accent);
-            box-shadow: 10px 10px 0 var(--border);
+            border: 3px solid var(--border);
             margin-bottom: 30px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             overflow: hidden;
         }
         .modal-img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover; /* 비율 유지하며 꽉 채우기 */
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: contain; /* 사진 안 짤리게 설정 */
         }
 
-        /* 탭 고정(Sticky) 영역 */
+        /* [수정] 탭 가독성 강화 스타일 */
         .asset-selector { 
-            display: flex; gap: 10px; flex-wrap: wrap; justify-content: flex-start;
+            display: flex; gap: 12px; flex-wrap: wrap; justify-content: flex-start;
             position: sticky; top: 0; z-index: 1000;
-            background: var(--bg); padding: 20px 40px;
-            border-bottom: 2px solid var(--border);
-            box-shadow: 0 5px 15px rgba(0,0,0,0.5);
+            background: #1c2128; padding: 25px 40px;
+            border-bottom: 3px solid var(--accent);
+            box-shadow: 0 10px 20px rgba(0,0,0,0.5);
         }
         .asset-btn { 
-            padding: 10px 20px; background: var(--card); border: 2px solid var(--border); 
-            color: var(--accent); cursor: pointer; font-size: 0.85rem; transition: 0.2s;
+            padding: 12px 24px; background: #0d1117; border: 2px solid var(--border); 
+            color: var(--text-sub); cursor: pointer; font-size: 0.9rem; transition: 0.2s;
+            font-weight: bold;
         }
-        .asset-btn:hover, .asset-btn.active { background: var(--accent); color: #0d1117; border-color: #fff; }
+        .asset-btn:hover { border-color: var(--accent); color: var(--accent); }
+        .asset-btn.active { 
+            background: var(--accent); 
+            color: #0d1117; 
+            border-color: #fff;
+            box-shadow: 4px 4px 0 rgba(0,0,0,0.3);
+        }
 
-        .viewer-container { width: 100%; min-height: 750px; background: #000; position: relative; }
-        .asset-viewer { width: 100%; height: 750px; border: none; display: none; }
+        /* [수정] PDF/영상 뷰어 크기 살짝 축소 */
+        .viewer-container { width: 100%; min-height: 680px; background: #000; position: relative; padding: 20px 0; }
+        .asset-viewer { width: 96%; height: 680px; border: 2px solid var(--border); display: none; margin: 0 auto; }
         .asset-viewer.active { display: block; }
 
-        /* 플레이 영상 83% 크기 조정 */
-        .video-wrapper { 
-            width: 100%; height: 100%; 
-            display: flex; align-items: center; justify-content: center; 
-            background: #000; 
-        }
-        .video-wrapper iframe { 
-            width: 83%; height: 83%; 
-            box-shadow: 0 0 30px rgba(151, 193, 231, 0.2);
-        }
+        .video-wrapper { width: 100%; height: 680px; display: flex; align-items: center; justify-content: center; }
+        .video-wrapper iframe { width: 83%; height: 83%; box-shadow: 0 0 40px rgba(0,0,0,0.9); }
 
         .info-box { border: 2px dashed var(--accent); padding: 25px; margin: 25px 0; background: var(--accent-dim); text-align: left; }
         .info-box h4 { color: var(--accent); font-size: 1rem; margin: 0 0 15px 0; }
-        .info-box ul { padding-left: 20px; margin: 0; }
 
-        @media (max-width: 950px) { 
-            .skills-wrapper, .project-container { grid-template-columns: 1fr; } 
-            .viewer-container { min-height: 450px; } 
-            .asset-viewer { height: 450px; } 
-            .asset-selector { padding: 15px 20px; } 
-            /* 모바일에서 이미지 높이 줄임 */
-            .modal-img-container { height: 250px; }
-        }
+        @media (max-width: 950px) { .skills-wrapper, .project-container { grid-template-columns: 1fr; } .viewer-container { min-height: 400px; } .asset-viewer, .video-wrapper { height: 400px; } .asset-selector { padding: 15px 20px; } .modal-img-container { height: 200px; } }
     </style>
 </head>
 <body>
 
     <div id="intro-overlay">
-        <h1>GAME DESIGNER<br>LEE JAE YOUNG<br><span>PORTFOLIO</span></h1>
+        <h1>GAME DESIGNER<br>이재영<br><span>PORTFOLIO</span></h1>
         <button class="btn-pixel blink" onclick="startGame()">START ADVENTURE</button>
     </div>
 
@@ -193,14 +188,14 @@
             <div class="skill-group-title">기획 & 분석</div>
             <div class="skill-item"><div class="skill-name">Excel ★★★★☆</div><div class="skill-desc">데이터 분석 및 VBA 자동화</div></div>
             <div class="skill-item"><div class="skill-name">Figma ★★★★☆</div><div class="skill-desc">UI/UX 설계 및 프로토타입</div></div>
-            <div class="skill-item"><div class="skill-name">PowerPoint ★★★★☆</div><div class="skill-desc">제안서 기획 및 비주얼 디자인</div></div>
+            <div class="skill-item"><div class="skill-name">PowerPoint ★★★★☆</div><div class="skill-desc">제안서 및 비주얼 기획</div></div>
             <div class="skill-item"><div class="skill-name">Word ★★★★☆</div><div class="skill-desc">표준 문서 관리 및 명세서</div></div>
         </div>
         <div class="skill-group">
             <div class="skill-group-title">개발 & 엔진</div>
             <div class="skill-item"><div class="skill-name">Gamemaker ★★★★☆</div><div class="skill-desc">축구+리듬 하이브리드 기획</div></div>
             <div class="skill-item"><div class="skill-name">Unity ★★★☆☆</div><div class="skill-desc">엔진 기반 협업 및 기능 활용</div></div>
-            <div class="skill-item"><div class="skill-name">Gemini ★★★★☆</div><div class="skill-desc">AI 협업 및 자료 정리</div></div>
+            <div class="skill-item"><div class="skill-name">Gemini ★★★★☆</div><div class="skill-desc">AI 협업 및 데이터 시각화</div></div>
             <div class="skill-item"><div class="skill-name">NotebookLM ★★★★☆</div><div class="skill-desc">방대한 설정 분석 및 검증</div></div>
         </div>
     </div>
@@ -298,11 +293,10 @@
                 `<button class="asset-btn ${idx===0?'active':''}" onclick="switchTab(this, ${idx})">${as.title}</button>`
             ).join('');
 
-            // [수정] 모달 내 이미지 컨테이너 클래스 사용
             document.getElementById('modalBody').innerHTML = `
                 <div class="modal-inner-padding">
                     <div class="modal-img-container">
-                        <img src="${p.img}" class="modal-img" alt="${p.title}">
+                        <img src="${p.img}" class="modal-img">
                     </div>
                     <h2 style="color:var(--accent); font-size:1.6rem; margin-bottom:10px; text-align:left;">${p.title}</h2>
                     <p style="font-weight:bold; color:var(--text-sub); margin-bottom:25px; text-align:left;">[ ${p.tag} ]</p>
